Removed GUI in favor of HUD, fixed some bugs and more!

--- a/src/main/resources/assets/manaliquidizer/lang/en_us.json
+++ b/src/main/resources/assets/manaliquidizer/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "block.manaliquidizer.mana_liquidizer": "Mana Liquidizer"
+  "itemGroup.manaliquidizer" : "Mana Liquidizer",
+  "block.manaliquidizer.mana_liquidizer": "Mana Liquidizer",
+  "item.manaliquidizer.mana_fluid_bucket": "Mana Fluid Bucket"
 }
