--- a/src/main/resources/assets/manaliquidizer/lang/en_us.json
+++ b/src/main/resources/assets/manaliquidizer/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.manaliquidizer" : "Mana Liquidizer",
-  "block.manaliquidizer.mana_liquidizer": "Mana Liquidizer",
-  "item.manaliquidizer.mana_fluid_bucket": "Mana Fluid Bucket"
+  "block.manaliquidizer.mana_liquidizer" : "Mana Liquidizer",
+  "fluid.manaliquidizer.mana_fluid" : "Mana Fluid",
+  "item.manaliquidizer.mana_fluid_bucket" : "Mana Fluid Bucket"
 }
